refactor drawcall logic